--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
   <header class="menu-bg">
     <div class="menu">
       <div class="menu-logo"><a href="#">FlexBlog</a></div>
-      <nav>
+      <nav class="menu-nav">
         <ul>
-          <li><a href="#Sobre"></a>Sobre</li>
-          <li><a href="#Produtos"></a>Produtos</li>
-          <li><a href="#Preco"></a>Preço</li>
-          <li><a href="#Qualidade"></a>Qualidade</li>
+          <li><a href="#Sobre">Sobre</a></li>
+          <li><a href="#Produtos">Produtos</a></li>
+          <li><a href="#Preco">Preço</a></li>
+          <li><a href="#Qualidade">Qualidade</a></li>
         </ul>
       </nav>
     </div>
