--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       <div class="menu-logo"><a href="#">FlexBlog</a></div>
       <nav class="menu-nav">
         <ul>
-          <li><a href="#Sobre">Sobre</a></li>
-          <li><a href="#Produtos">Produtos</a></li>
-          <li><a href="#Preco">Preço</a></li>
-          <li><a href="#Qualidade">Qualidade</a></li>
+          <li><a href="#sobre">Sobre</a></li>
+          <li><a href="#produtos">Produtos</a></li>
+          <li><a href="#preco">Preço</a></li>
+          <li><a href="#qualidade">Qualidade</a></li>
         </ul>
       </nav>
     </div>
